# exp-mac-game

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml  release.config.json
.github/workflows/: release.yml
.omc/state/: agent-replay-61b4a7e2-369b-4522-9faf-b95ac9de6b3d.jsonl  agent-replay-cbf07446-da42-408d-bc0f-ff3b896ed8d7.jsonl  hud-stdin-cache.json
.omc/state/sessions/61b4a7e2-369b-4522-9faf-b95ac9de6b3d/: hud-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
.omc/state/sessions/cbf07446-da42-408d-bc0f-ff3b896ed8d7/: hud-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
crates/desktop/: .env.example  Cargo.toml
crates/desktop/assets/: style.css
crates/desktop/src/: main.rs
crates/server/: .env.example  Cargo.toml
crates/server/migrations/: 202606010001_create_users_and_scores.sql  202606010002_scores_one_row_per_user.sql
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
output/: channel-manifest.json  manifest.json
scripts/: run-release-local.sh
