[workspace]
members = [
    "crates/desktop",
    "crates/server",
    "crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.7.9", features = ["desktop"] }
dotenvy = "0.15"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snake-shared = { path = "crates/shared" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
