[package]
name = "snake-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
snake-shared.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
